src/main/scala/chapter7/shoutput/RunUseCat.output
// #output
UseCat.scala:5: error: type mismatch;
 found   : Cat
 required: Friend
  val friend : Friend = alf // ERROR
                        ^
UseCat.scala:7: error: type mismatch;
 found   : Cat
 required: Friend
  useFriend(alf) // ERROR
            ^
two errors found
// #output

